Se incorporo attactment responsive para la carga de imagenes en bucket s3 en diferentes sizes

--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -20,7 +20,10 @@
   "providers": [
     "./providers/AppProvider",
     "@adonisjs/core",
-    "@adonisjs/lucid"
+    "@adonisjs/lucid",
+    "@adonisjs/attachment-lite",
+    "@adonisjs/drive-s3",
+    "adonis-responsive-attachment"
   ],
   "aceProviders": [
     "@adonisjs/repl"
