--- a/package.json
+++ b/package.json
@@ -55,9 +55,12 @@
     "youch-terminal": "^2.2.3"
   },
   "dependencies": {
+    "@adonisjs/attachment-lite": "^1.0.8",
     "@adonisjs/core": "^5.9.0",
+    "@adonisjs/drive-s3": "^1.3.3",
     "@adonisjs/lucid": "^18.4.2",
     "@adonisjs/repl": "^3.1.11",
+    "adonis-responsive-attachment": "^1.5.10",
     "luxon": "^3.4.3",
     "pg": "^8.11.3",
     "proxy-addr": "^2.0.7",
