--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,10 @@
       "@adonisjs/core",
       "@adonisjs/repl",
       "@japa/preset-adonis/build/adonis-typings",
-      "@adonisjs/lucid"
+      "@adonisjs/lucid",
+      "@adonisjs/attachment-lite",
+      "@adonisjs/drive-s3",
+      "adonis-responsive-attachment"
     ]
   }
 }
